GDHI-Tech : Fix Indicator lenghts to fix a 4X4 alignment <Shaswat>

--- a/src/assets/stylesheets/components/auto-search/_auto-search.scss
+++ b/src/assets/stylesheets/components/auto-search/_auto-search.scss
@@ -3,7 +3,7 @@
 .search-box {
   display: flex;
   justify-content: space-between;
-  width: 16vw;
+  width: 20vw;
   flex-direction: column;
   @extend .copy;
 
