--- a/src/assets/stylesheets/components/indicator-filter/_indicator-filter.scss
+++ b/src/assets/stylesheets/components/indicator-filter/_indicator-filter.scss
@@ -2,7 +2,7 @@
 
 .filter-indicator {
   height: 100%;
-  width: 16vw;
+  width: 20vw;
   @include margin-right(2.5vw);
   @include margin-left(0.5vw);
 
