--- a/src/assets/stylesheets/components/indicator-panel/_indicator-panel.scss
+++ b/src/assets/stylesheets/components/indicator-panel/_indicator-panel.scss
@@ -67,7 +67,7 @@
       align-items: center;
 
       &-section {
-        width: 16vw;
+        width: 20vw;
         margin-top: 15px;
         @include margin-right(2.5vw);
         @include margin-left(0.5vw);
